kube_apps/tig/deploy-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: tig
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: grafana
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.include_tags: "latest"
    spec:
      securityContext:
        runAsUser: 977
        runAsGroup: 988
        fsGroup: 988
        supplementalGroups: [ 1000 ]
      containers:
        - name: grafana
          securityContext:
            runAsUser: 977
            runAsGroup: 988
          image: grafana/grafana:13.1.3-ubuntu
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: "1024Mi"
            requests:
              memory: "380Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          volumeMounts:
#            - mountPath: /usr/share/grafana
#              name: grafana-volume
#              subPath: data/
            -  mountPath: /etc/grafana/provisioning
               name: grafana-volume
               subPath: provisioning/
            - mountPath: /etc/grafana/grafana.ini
              name: grafana-volume
              subPath: grafana.ini
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: grafana-volume
          persistentVolumeClaim:
            claimName: pvc-grafana-unifi
