kube_apps/tig/deploy-influx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influx
  namespace: tig
  labels:
    app: influx
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: influx
  template:
    metadata:
      labels:
        app: influx
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.include_tags: "latest;2.7.*"
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7.5-alpine
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: "1206Mi"
            requests:
              memory: "900Mi"
              cpu: "250m"
          ports:
            - containerPort: 8086
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /var/lib/influxdb2
              name: influx-data
      volumes:
        - name: influx-data
          persistentVolumeClaim:
            claimName: pvc-influx
