kube_apps/tig/svc-grafana-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-grafana-cluster
  namespace: tig
  labels:
    app: grafana
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: grafana
