kube_apps/tig/svc-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-grafana
  namespace: tig
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: grafana
