kube_apps/tig/svc-influx-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-influx-cluster
  namespace: tig
  labels:
    app: influx
spec:
  type: ClusterIP
  ports:
    - port: 8086
      protocol: TCP
      targetPort: http
  selector:
    app: influx
