kube_apps/tig/svc-influx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-influx
  namespace: tig
  labels:
    app: influx
spec:
  type: NodePort
  ports:
    - port: 8086
      protocol: TCP
      targetPort: http
      #nodePort: 32010
  selector:
    app: influx
