kube_apps/tig/svc-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana
  namespace: lens-metrics
spec:
  type: NodePort
  ports:
    - name: web
      nodePort: 30900
      port: 9090
      protocol: TCP
  selector:
    name: prometheus
