kube_apps/tig/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: tig
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: file
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: grafana.houseofus.eu
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  rules:
    - host: grafana.houseofus.eu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-grafana-cluster
              port:
                number: 3000
