kube_apps/tig/ingress-influx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influx-ingress
  namespace: tig
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: influx2.houseofus.eu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-influx-cluster
              port:
                number: 8086
